# NexusStratum

./: .gitignore  ACCESSIBILITY.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/stratum/: Cargo.toml  README.md
crates/stratum-a11y/: Cargo.toml  README.md
crates/stratum-a11y/src/: focus_visible.rs  keyboard.rs  lib.rs  live_region.rs  media_query.rs
crates/stratum-cli/: Cargo.toml  README.md
crates/stratum-cli/src/: lib.rs  main.rs
crates/stratum-components/: Cargo.toml  README.md
crates/stratum-components/src/: common.rs  lib.rs
crates/stratum-components/src/data_display/: badge.rs  card.rs  mod.rs  skeleton.rs  spinner.rs
crates/stratum-components/src/feedback/: mod.rs
crates/stratum-components/src/forms/: button.rs  checkbox.rs  form.rs  input.rs  mod.rs  radio.rs  select.rs  switch.rs  textarea.rs
crates/stratum-components/src/layout/: divider.rs  mod.rs  stack.rs
crates/stratum-components/src/navigation/: accordion.rs  mod.rs  tabs.rs
crates/stratum-components/src/overlay/: alert_dialog.rs  dialog.rs  mod.rs  popover.rs  toast.rs  tooltip.rs
crates/stratum-components/src/typography/: heading.rs  link.rs  mod.rs  text.rs
crates/stratum-components/src/utility/: focus_scope.rs  mod.rs  portal.rs  separator.rs  visually_hidden.rs
crates/stratum-core/: Cargo.toml  README.md
crates/stratum-core/src/: aria.rs  callback.rs  component.rs  event.rs  focus.rs  id.rs  lib.rs  props.rs  render.rs  security.rs  state.rs
crates/stratum-css/: Cargo.toml  README.md
crates/stratum-css-macros/: Cargo.toml  README.md
crates/stratum-css-macros/src/: lib.rs
crates/stratum-css/src/: lib.rs  registry.rs  style_props.rs
crates/stratum-dioxus/: Cargo.toml  README.md
crates/stratum-dioxus/src/: adapter.rs  lib.rs  provider.rs
crates/stratum-dioxus/src/components/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  empty_state.rs  heading.rs  hover_card.rs  input.rs  input_otp.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  number_input.rs  pagination.rs  popover.rs  progress.rs  radio.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  (+10 more)
crates/stratum-explorer/: Cargo.toml  README.md
crates/stratum-explorer/src/: generator.rs  lib.rs
crates/stratum-icons/: Cargo.toml  README.md
crates/stratum-icons/src/: icon.rs  lib.rs  lucide.rs
crates/stratum-leptos/: Cargo.toml  README.md
crates/stratum-leptos/src/: adapter.rs  lib.rs  provider.rs
crates/stratum-leptos/src/components/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  empty_state.rs  heading.rs  hover_card.rs  input.rs  input_otp.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  number_input.rs  pagination.rs  popover.rs  progress.rs  radio.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  (+10 more)
crates/stratum-motion/: Cargo.toml  README.md
crates/stratum-motion/src/: easing.rs  lib.rs  transition.rs
crates/stratum-primitives/: Cargo.toml  README.md
crates/stratum-primitives/src/: accordion.rs  alert_dialog.rs  checkbox.rs  collapsible.rs  dialog.rs  disclosure.rs  focus_scope.rs  form.rs  lib.rs  menu.rs  popover.rs  portal.rs  pressable.rs  progress.rs  radio.rs  select.rs  separator.rs  switch.rs  tabs.rs  text_area.rs  text_input.rs  toast.rs  toggle.rs  tooltip.rs  visually_hidden.rs
crates/stratum-sdk/: Cargo.toml  README.md
crates/stratum-sdk/src/: lib.rs  metadata.rs
crates/stratum-security/: Cargo.toml  README.md
crates/stratum-security/src/: csp.rs  csrf.rs  headers.rs  lib.rs  sanitize.rs  sri.rs
crates/stratum-tailwind/: Cargo.toml  README.md
crates/stratum-tailwind-macros/: Cargo.toml  README.md
crates/stratum-tailwind-macros/src/: lib.rs
crates/stratum-tailwind/src/: builder.rs  config.rs  lib.rs  merge.rs
crates/stratum-test/: Cargo.toml  README.md
crates/stratum-test/src/: lib.rs
crates/stratum-theme/: Cargo.toml  README.md
crates/stratum-theme/src/: color.rs  css_gen.rs  lib.rs  scale.rs  theme.rs  token.rs  typography.rs
crates/stratum/src/: lib.rs
security-audit/session-be48a731-ffba-4ac2-8151-5a1a8ab7d9aa/: audit.jsonl
site/: index.html
site/assets/: app.js  style.css
site/blocks/: index.html
site/components/: accordion.html  alert.html  badge.html  button.html  card.html  checkbox.html  dialog.html  divider.html  form.html  heading.html  index.html  input.html  link.html  menu.html  popover.html  progress.html  radio.html  select.html  separator.html  skeleton.html  spinner.html  stack.html  switch.html  tabs.html  text.html  textarea.html  toast.html  tooltip.html  visually-hidden.html
site/docs/: accessibility.html  adapters.html  cli.html  components.html  dark-mode.html  dioxus.html  index.html  installation.html  leptos.html  primitives.html  security.html  theming.html
test-results/: .last-run.json
test-results/site-Blocks-loads-with-block-cards-chromium/: error-context.md
test-results/site-Component-Detail---Bu-41b21--with-preview-and-code-tabs-chromium/: error-context.md
test-results/site-Component-Detail---Button-preview-code-toggle-works-chromium/: error-context.md
test-results/site-Component-Detail---Button-props-table-is-present-chromium/: error-context.md
test-results/site-Component-Detail---Button-sidebar-navigation-works-chromium/: error-context.md
test-results/site-Components-Catalog-category-filter-works-chromium/: error-context.md
test-results/site-Components-Catalog-component-card-links-to-detail-page-chromium/: error-context.md
test-results/site-Components-Catalog-loads-with-component-cards-chromium/: error-context.md
tests/e2e/: playwright.config.ts  site.spec.ts
(+27 files in other folders)
