[package]
name = "stratum-a11y"
description = "Accessibility utilities for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
