[package]
name = "nexus-stratum-a11y"
description = "Accessibility utilities for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_a11y"

[dependencies]
nexus-stratum-core = { workspace = true }
