[package]
name = "nexus-stratum-cli"
description = "CLI tool for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
