[package]
name = "nexus-stratum-components"
description = "Styled UI components for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_components"

[dependencies]
nexus-stratum-core = { workspace = true }
