[package]
name = "nexus-stratum-core"
description = "Core traits and types for NexusStratum UI component library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
