[package]
name = "stratum-css-macros"
description = "Proc macros for stratum-css"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
