[package]
name = "nexus-stratum-css-macros"
description = "Proc macros for nexus-stratum-css"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true
name = "stratum_css_macros"

[dependencies]
quote = "1"
