[package]
name = "stratum-css"
description = "CSS-in-Rust system for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-css-macros = { workspace = true }
serde = { workspace = true }
