[package]
name = "nexus-stratum-css"
description = "CSS-in-Rust system for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_css"

[dependencies]
nexus-stratum-css-macros = { workspace = true }
serde = { workspace = true }
