[package]
name = "nexus-stratum-dioxus"
description = "Dioxus framework adapter for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_dioxus"

[dependencies]
nexus-stratum-core = { workspace = true }
nexus-stratum-components = { workspace = true }
nexus-stratum-theme = { workspace = true }
