[package]
name = "nexus-stratum-explorer"
description = "Component explorer for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_explorer"

[dependencies]
nexus-stratum-core = { workspace = true }
nexus-stratum-sdk = { workspace = true }
serde_json = { workspace = true }
