[package]
name = "nexus-stratum-icons"
description = "Icon library for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_icons"

[dependencies]
nexus-stratum-core = { workspace = true }
serde = { workspace = true }
