[package]
name = "stratum-leptos"
description = "Leptos framework adapter for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
stratum-components = { workspace = true }
stratum-theme = { workspace = true }
stratum-icons = { workspace = true }
leptos = { version = "0.7", features = ["csr"] }
