[package]
name = "stratum-leptos"
description = "Leptos framework adapter for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
stratum-components = { workspace = true }
stratum-theme = { workspace = true }
# leptos is needed for future Leptos component macros (view!, #[component], etc.)
leptos = { version = "0.8", features = ["csr"] }
