[package]
name = "stratum-motion"
description = "Animation and transition system for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
