[package]
name = "nexus-stratum-primitives"
description = "Headless, unstyled UI primitives for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_primitives"

[dependencies]
nexus-stratum-core = { workspace = true }
nexus-stratum-a11y = { workspace = true }
serde_json = { workspace = true }
