[package]
name = "stratum-sdk"
description = "SDK and editor tooling for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
