[package]
name = "nexus-stratum-sdk"
description = "SDK and editor tooling for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_sdk"

[dependencies]
nexus-stratum-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
