[package]
name = "stratum-security"
description = "Security hardening for NexusStratum — XSS prevention, CSP, input sanitization"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
