[package]
name = "nexus-stratum-security"
description = "Security hardening for NexusStratum — XSS prevention, CSP, input sanitization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_security"

[dependencies]
nexus-stratum-core = { workspace = true }
getrandom = "0.3"
