[package]
name = "nexus-stratum-tailwind-macros"
description = "Proc macros for nexus-stratum-tailwind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true
name = "stratum_tailwind_macros"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
