[package]
name = "stratum-tailwind"
description = "Tailwind CSS integration for NexusStratum"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-theme = { workspace = true }
stratum-tailwind-macros = { workspace = true }
