[package]
name = "nexus-stratum-tailwind"
description = "Tailwind CSS integration for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_tailwind"

[dependencies]
nexus-stratum-theme = { workspace = true }
nexus-stratum-tailwind-macros = { workspace = true }
