[package]
name = "nexus-stratum-test"
description = "Test utilities for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_test"

[dependencies]
nexus-stratum-core = { workspace = true }
