[package]
name = "nexus-stratum-theme"
description = "Design token and theme system for NexusStratum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stratum_theme"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
