[package]
name = "stratum"
description = "NexusStratum — Production-ready UI component library for Rust"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
stratum-core = { workspace = true }
stratum-primitives = { workspace = true }
stratum-components = { workspace = true }
stratum-theme = { workspace = true }
stratum-a11y = { workspace = true }
stratum-leptos = { workspace = true, optional = true }
stratum-dioxus = { workspace = true, optional = true }
stratum-tailwind = { workspace = true, optional = true }
stratum-css = { workspace = true, optional = true }
stratum-icons = { workspace = true, optional = true }
stratum-motion = { workspace = true, optional = true }
stratum-security = { workspace = true, optional = true }

[features]
leptos = ["dep:stratum-leptos"]
dioxus = ["dep:stratum-dioxus"]
tailwind = ["dep:stratum-tailwind"]
css = ["dep:stratum-css"]
icons = ["dep:stratum-icons"]
motion = ["dep:stratum-motion"]
security = ["dep:stratum-security"]
# full enables everything except dioxus — leptos and dioxus are mutually
# exclusive framework choices, so pick one explicitly.
full = ["leptos", "tailwind", "css", "icons", "motion", "security"]
